examples/codegen/effects/state.an
effect Use a =
    get: fn Unit -> a
    set: fn a -> Unit

use_state (y: I32) {Use I32} =
    x = get ()
    set (x + y)
    state = get ()
    println "Ending state = ${state}"

state (f: fn {Use s} -> a) (initial: s) {Copy s}: a =
    var current = initial
    handler h for
    | get () -> resume current
    | set new_state ->
        current := new_state
        resume ()
    in f {h}

main () =
    state (use_state 10 {_}) 1
    state (fn h -> use_state 20 {h}) 2

// args: --delete-binary --no-color
// expected exit status: 1
// expected stderr:
// examples/codegen/effects/state.an:5:21
//   | // error: This is an effect and cannot be used as an ordinary type
// 5 | use_state (y: I32) {Use I32} =
//   |                     ^^^^^^^
// 6 |     x = get ()
// 
// examples/codegen/effects/state.an:11:15
//    | // error: This is an effect and cannot be used as an ordinary type
// 11 | state (f: fn {Use s} -> a) (initial: s) {Copy s}: a =
//    |               ^^^^^
// 12 |     var current = initial
// 
// examples/codegen/effects/state.an:18:11
// 17 |         resume ()
// 18 |     in f {h}	// error: Argument 1 has type <(Use s)> but Use s was expected
//    |           ^
// 
// examples/codegen/effects/state.an:20:1
//    | // error: main here has type fn Unit -> Unit can (Use I32), _ but it should always have type fn Unit -> Unit pure
// 20 | main () =
//    | ^^^^
// 21 |     state (use_state 10 {_}) 1
// 
// Found 4 errors and 0 warnings

